--- a/Mapping_Golf_Clubs.ipynb
+++ b/Mapping_Golf_Clubs.ipynb
@@ -581,7 +581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The cell above displays that I am not a great golfer (yet)\n",
+    "## The cell above displays that I am not a great golfer (yet)\n",
     " \n",
     "Although I do have some decent distances for a new golfer, we see some inconsidtancies in the distance achieveed by each club.\n",
     "\n",
@@ -669,7 +669,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This plot compares Total Distance & Flat Carry. \n",
+    "## This plot compares Total Distance & Flat Carry. \n",
     "\n",
     "We see that my wedges perform as expexted, with them landing at a steep angle, allowing the vall to have very little to negative distance gained after the ball strikes the ground. This shows good landing angle, and also potentially backspin.\n",
     "\n",
@@ -723,7 +723,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This plot confirms our assumptions from the previous plot, where we see the Total Distance seperates from Flat Carry more with the clubs associated with farther total distance & lower lofts. "
+    "## This plot confirms our assumptions from the previous plot, where we see the Total Distance seperates from Flat Carry more with the clubs associated with farther total distance & lower lofts. "
    ]
   },
   {
@@ -782,7 +782,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# These plots show Total Distance vs. Launch Angle & Total Distance vs. Ball Speed\n",
+    "## These plots show Total Distance vs. Launch Angle & Total Distance vs. Ball Speed\n",
     "\n",
     "As expected, we see that lower launch angles and higher ball speeds correalted to farther total distances."
    ]
@@ -858,9 +858,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# These plots show specifically data from Driver shots.\n",
+    "## These plots show specifically data from driver shots.\n",
     "\n",
-    "# These plots show the he Total Distance vs. Launch Angle & Total Distance vs. Ball Speed\n",
+    "## These plots show the Total Distance vs. Launch Angle & Total Distance vs. Ball Speed\n",
     "\n",
     "We notice that in shots with my driver, a higher launch angle correlates with father total distance. The average PGA tour driver launch angle is 10.9, which is significantly lower than my typical launch angle. Optimal launch angle for distance is 12-16 degrees, which is around my range.  I know that I have an issue with having too much launch angle on my driver and tend to hit up on the ball. \n",
     "\n",
@@ -912,7 +912,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Driver: Launch Angle vs. Ball Speed\n",
+    "## Driver: Launch Angle vs. Ball Speed\n",
     "\n",
     "We see that there is a positive correlation between Launch Angle and Ball Speed, which supports my previous theory that the balls hit the hardest, have a higher launch angle. We have limited datapoints here, but I believe that there is some effect of harder hit balls mangaging to be hit poorly. "
    ]
@@ -987,7 +987,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The plot above is updated with color coordination for total distance of the shots.\n",
+    "## The plot above is updated with color coordination for total distance of the shots.\n",
     "\n",
     "Top 33% in Total Distance: Green\n",
     "Middle 33% in Total Distance: Green\n",
@@ -1124,7 +1124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple Linear Regression model to predict the distance of iron shots using Ball Speed & Launch Angle\n",
+    "## Simple Linear Regression model to predict the distance of iron shots using Ball Speed & Launch Angle\n",
     "\n",
     "We ultimately see that launch angle possessses significantly more predictive power when trying to forecast total distance, which makes sense given that clubs are designed to provide different launch angles, while ball speed can only fluctuate so much between different club angles. "
    ]
@@ -1248,7 +1248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple Linear Regression model to predict the distance of driver shots using Ball Speed & Launch Angle\n",
+    "## Simple Linear Regression model to predict the distance of driver shots using Ball Speed & Launch Angle\n",
     "\n",
     "In this basic model, we see that launch angle is our best predictive variable, while our model could certainly use more datapoints & possible outlier rejection. "
    ]
